
History
=======

0.1.2
-----

* Fixed build requirements
* Fixed install of 'ia32-sun-java6-bin' on 64-bit systems
* Fixed install of Java browser plugin on systems without a supported browser
* Added runtime requirements
* Added TODO

0.1.1
-----

* Updated to use dynamic version detection throughout
* Fixed package installation when upgrading
* Minor documentation updates

0.1.0
-----

* Initial release